# kiko

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  playwright.config.js
.github/workflows/: e2e-tests.yml
crates/kiko/: Cargo.toml
crates/kiko-backend/: Cargo.toml
crates/kiko-backend/src/: main.rs  messaging.rs
crates/kiko-backend/src/handlers/: health.rs
crates/kiko-backend/src/handlers/v1/: health.rs  mod.rs  session.rs  websocket.rs
crates/kiko-backend/src/services/: mod.rs  sessions.rs
crates/kiko-frontend/: Cargo.toml  Trunk.toml
crates/kiko-frontend/public/: index.html  robots.txt
crates/kiko-frontend/src/: api.rs  main.rs  routes.rs  websocket.rs
crates/kiko-frontend/src/components/: confetti.rs  copy_url_button.rs  mod.rs  theme_toggle.rs  websocket_chat.rs
crates/kiko-frontend/src/components/sessions/: connection_indicator.rs  create_session.rs  mod.rs  session_view.rs  session_view_old.rs
crates/kiko-frontend/src/hooks/: mod.rs  use_websocket.rs
crates/kiko-frontend/src/pages/: home.rs  mod.rs  session.rs
crates/kiko-frontend/src/providers/: api.rs  confetti.rs  mod.rs  theme.rs
crates/kiko/src/: api.rs  data.rs  errors.rs  id.rs  lib.rs  log.rs  macros.rs
e2e/: session-page.spec.js
tests/e2e/: package.json  playwright.config.js
tests/e2e/playwright-report/: index.html
tests/e2e/src/: create-session.spec.js  example.spec.js  home-page.spec.js  session-page.spec.js
