[package]
name = "kiko-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.30"
gloo-net = { version = "0.6.0", features = ["websocket"] }
js-sys = "0.3.72"
kiko = { path = "../kiko" }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.72"
yew = { version = "0.21.0", features = ["csr"] }
