[package]
name = "kiko-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.30"
gloo-net = { version = "0.6.0", features = ["websocket"] }
gloo-timers = "0.3.0"
js-sys = "0.3.72"
kiko = { path = "../kiko" }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.72", features = ["Navigator", "Clipboard", "HtmlCanvasElement", "CanvasRenderingContext2d", "Window", "Document"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
