[package]
name = "kiko"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
gloo-net = "0.6.0"
async-trait = "0.1.88"
tiny_id = "0.1.6"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3.19", features = [
    "fmt",
    "env-filter",
    "time",
] }
color-eyre = "0.6.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-web = { version = "0.1.3", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "time"], optional = true }
time = { version = "0.3", features = ["wasm-bindgen"] }

[features]
default = ["dev-logging"]
dev-logging = ["tracing-web", "tracing-subscriber"]
